fix: force show controls on safari/touch devices using JS

--- a/snake/style.css
+++ b/snake/style.css
@@ -60,6 +60,8 @@ body {
     font-size: 24px;
     cursor: pointer;
     user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
     -webkit-tap-highlight-color: transparent;
 }
 
